--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -7,8 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>
+    <nav>
+        <img src="IMAGENES/Logo1.png" alt="logo" width="120" height="120"> 
+        <a href="index.html">HOME</a>
+        <a href="paquetes.html">PAQUETES</a>
+        <a href="previaje.html">PRE VIAJE</a>
+        <a href="formularioContacto.html">CONTACTO</a>
+    </nav>
+</header>
 
 <body>
+    <section>
+        <h1>Dejanos tus datos de contacto</h1>
     <form action="link" method="POST" target="_blank">
         <label for="fname">Nombre:</label><br>
         <input type="text" id="fname" name="fname" placeholder="Ingrese su nombre"><br>
@@ -64,6 +75,7 @@
         <input type="text" id="consulta" placeholder="Ingrese su consulta..."><br>
         <input type="submit" value="Enviar"><br>
     </form>
+</section>
 </body>
 
 </html>
