--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="IMAGENES/favicon.ico" sizes="64x64">
     <title>Document</title>
 </head>
 <header>
