--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="IMAGENES/favicon.ico" sizes="64x64">
     <title>Document</title>
 </head>
 <header>
@@ -22,7 +23,7 @@
     <section> 
         <article>
         <h1>¿Quienes somos?</h1>
-        <p> En (NOMBRE) nos caracterizamos por el servicio y trato personalizado. Diseñamos y programaos tu viaje, brindandote asistencia previa y durante el viaje.
+        <p> En Turisteca nos caracterizamos por el servicio y trato personalizado. Diseñamos y programaos tu viaje, brindandote asistencia previa y durante el viaje.
             El objetivo Principal de nuestra empresa es lograr la total satisfaccion de nuestros pasajeros; para ello, contamos con un profesional equipo en todas las areas.
         </p>
         </article>
