--- a/previaje.html
+++ b/previaje.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="IMAGENES/favicon.ico" sizes="64x64">
     <title>Document</title>
 </head>
 <header>
@@ -17,5 +18,27 @@
 </header>
 <body>
     <h1>PRE VIAJE</h1>
+    <section>
+        <article><h1>¿Que es el programa de Previaje o Preventa?</h1>
+            <p>Es un programa de reactivación del turismo por el cual se les devolverá a todos los turistas que adquieran un producto turístico nacional, el 50% del gasto y dicho crédito deberá ser utilizado en otra compra en el sector.
+            El período de vigencia para la generación del crédito será desde la fecha de lanzamiento del programa  hasta el 31/12/2021. El beneficiario podrá hacer uso del crédito durante 2022. El mismo lo realizará el Banco Nación.
+            Sólo podrán ser beneficiarios del programa las personas humanas – físicas (mayores de 18 años), no jurídicas. </p>
+            <h1>¿Cómo se lleva a cabo?</h1>
+            <p>Para las compras que se realizan en  agencias de viajes registradas legalmente (no freelance), al beneficiario se le devolverá hasta $100.000 de crédito (implica un gasto de $200.000), con el resto de los prestadores el máximo a devolver es de $5000 (implica un gasto de $10.000). El gasto mínimo que debe realizar el beneficiario es de $10.000, los mismo son acumulativos. Por ende podrá cargar más de una factura en la web hasta llegar a este importe mínimo (y el importe minimo de cada factura sera de $1000). La devolución es del 50% es sobre el total de la factura, en pesos, (por el monto de la FC, con los impuestos dentro) siempre y cuando el pasajero compre todos los servicios en forma de paquete turístico en una agencia. Si compra un servicio por separado, (Ejemplo, alquiler de carpa en un balneario) el límite de reintegro es de AR$5000, lo que incentiva la compra anticipada de los servicios desde la agencia de viajes.</p>
+            <h1>¿Qué pasa si un pasajero gasta mas de $ 200.000 en agencia ya que el tope máximo del beneficio es de $100.000?</h1>
+            <p>Si un beneficiario gasta más de $200.000 (caso agencia), se aplica el tope máximo de reintegro de $100.000, y en este caso, se  desglosa el gasto en más de una factura a otro beneficiario del grupo que viaja. para que pueda hacer uso del beneficio del 50%.</p>
+            <h1>¿Cuándo comprar tu servicio turístico?</h1>
+            <p>Las ventas que se realicen desde el lanzamiento hasta fin de Octubre 2021, deberán ser para servicios a partir de ENERO 2021. Las ventas que se realicen durante Noviembre y Diciembre, deberán ser para utilizar a partir de Marzo 2022 hasta diciembre 2022</p>
+            <h1>¿Por que comprar un paquete turístico completo?</h1>
+            <p>Comprando el paquete en agencia, el tope de reintegro será completo, ya sea alojamiento y todos los medios de transportes, excursiones, alquiler de automóvil, traslados.
+                Si compra un servicio en el destino, y el gasto es de $20.000, solo se le reintegrara $5000, en cambio en agencia será de $10.000.</p>
+            <h1>¿Dónde puedo utilizar el beneficio?</h1> 
+            <p>El beneficiario podrá utilizarlo en toda la cadena de Turismo una vez comience el viaje. Si viaja en enero, lo utilizara en esa fecha, si compra para viajar en junio, lo utilizara a partir de junio.
+                Podes volver a la agencia y comprar otro servicio turístico con tu crédito o utilizarlo en todos los establecimientos asociados al programa, restaurantes, teatros, clases de buceo, etc, dentro del  territorio Argentino.
+                Ej. Si gastaste en la agencia $80.000, se te reintegraran $40.000, que podes utilizar durante tu viaje. Sino, al regresar, podes comprar en la agencia un servicio por $40.000.</p>  
+                 
+        </article>
+    </section>
+
 </body>
 </html>
