--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -58,7 +58,8 @@
                 </div>
                 <label for="consulta" id="consulta">Espacio para escribir su consulta:</label><br>
                 <textarea id="consulta" placeholder="Ingrese su consulta..." rows="10" cols="100"></textarea><br>
-                <input type="submit" value="Enviar"><br>
+                <button type="submit" class="btn btn-primary btn-lg btnblock">
+                    Enviar</button>
             </form>
         </div>
     </section>
