--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="js/bootstrap.min.js">
     <link rel="stylesheet" href="estilosFormularios.css">
+
     <title>Formulario de Contacto</title>
 </head>
 <header>
@@ -22,7 +23,9 @@
 
 <body>
     <section>
-        <h1>Dejanos tus datos de contacto</h1>
+        <div class="jumbotron jumbotron-fluid">
+            <h1 class="display-4">Dejanos tus datos de contacto</h1>
+        </div>
         <div class="container">
             <form action="link" method="POST" target="_blank">
                 <div class="row">
