--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <label for="consulta" id="consulta">Espacio para escribir su consulta:</label><br>
-                <textarea id="consulta" placeholder="Ingrese su consulta..." rows="10" cols="100"></textarea><br>
+                <textarea id="consulta" placeholder="Ingrese su consulta..." rows="5"></textarea><br>
                 <button type="submit" class="btn btn-primary btn-lg btnblock">
                     Enviar</button>
             </form>
