--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
 
             </section>
             <section class="seccion">
-                <h3>Recibí Novedades</h3>
-                <p><label><input type="text" name="e-mail" placeholder="e-mail"></label></p>
-                <input type="submit">
+                <h1>Recibí Novedades</h1><br>
+                <label for="recibinovedades" id="recibinovedades">Dejanos tu mail:</label><br>
+                <input type="text" id="recibinovedades" placeholder="xxxx@xxxx.com"><br>
+                <button type="submit" id="botonNovedades">Suscribirme</button>
             </section>
-        </div>
+       
 
-        <div class="aside"></div>
-        <aside>
-            <h2>¿Donde estamos?</h2><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1641.7603959298774!2d-58.43058413641257!3d-34.616277322773755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca44a0971f8d%3A0x4220201fe19c1972!2sSenillosa%2060%2C%20C1424BOB%20CABA!5e0!3m2!1ses-419!2sar!4v1634674686742!5m2!1ses-419!2sar"
+            <aside>
+               <h1>¿Donde estamos?</h1><iframe id="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1641.7603959298774!2d-58.43058413641257!3d-34.616277322773755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca44a0971f8d%3A0x4220201fe19c1972!2sSenillosa%2060%2C%20C1424BOB%20CABA!5e0!3m2!1ses-419!2sar!4v1634674686742!5m2!1ses-419!2sar"
                 width="100" height="120" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </aside>
+         </aside>
         </div>
     </main>
     <footer>
