--- a/paquetes.html
+++ b/paquetes.html
@@ -32,17 +32,17 @@
     <h1>PAQUETES</h1>
     <section>
         <h1>Nueva York - 11 dias/ 10 noches</h1>
-        <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos
+        <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos <br>
             Para pagos en pesos argentinos se deberá sumar por persona :U$D 511 impuesto PAIS sobre servicios terrestres y U$D 597 impuesto RG4815 sobre servicios terrestres</p>
-        <p>El programa incluye:
-            * 5 noches de alojamiento en New York con impuestos hoteleros & facility fee
-            * Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior
-            * Traslados de llegada y salida en servicio regular en New York
-            * Excursión Alto y Bajo Manhattan
-            * Crucero Maid of The Mist - Opera de Mayo a Octubre
-            * Manejo de 1 maleta por persona, maletas adicionales seran cobradas
+        <p>El programa incluye: <br>
+            * 5 noches de alojamiento en New York con impuestos hoteleros & facility fee <br>
+            * Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior <br>
+            * Traslados de llegada y salida en servicio regular en New York <br>
+            * Excursión Alto y Bajo Manhattan <br>
+            * Crucero Maid of The Mist - Opera de Mayo a Octubre <br>
+            * Manejo de 1 maleta por persona, maletas adicionales seran cobradas <br>
             * Asistencia en la cita con la vacuna (en caso de requerir este servicio)</p>
-            <p></p>
+            
     </section>
 </main>
 <footer>
