--- a/paquetes.html
+++ b/paquetes.html
@@ -29,21 +29,60 @@
     </header>
 
     <main>
-    <h1>PAQUETES</h1>
-    <section>
-        <h1>Nueva York - 11 dias/ 10 noches</h1>
+        <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+        <h1><link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">PAQUETES</h1>
+    <div class="paquetes"> 
+
+        <div class="p1">   
+        <h2><link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">Nueva York - 11 dias/ 10 noches</h2>
         <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos <br>
             Para pagos en pesos argentinos se deberá sumar por persona :U$D 511 impuesto PAIS sobre servicios terrestres y U$D 597 impuesto RG4815 sobre servicios terrestres</p>
         <p>El programa incluye: <br>
-            * 5 noches de alojamiento en New York con impuestos hoteleros & facility fee <br>
-            * Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior <br>
-            * Traslados de llegada y salida en servicio regular en New York <br>
-            * Excursión Alto y Bajo Manhattan <br>
-            * Crucero Maid of The Mist - Opera de Mayo a Octubre <br>
-            * Manejo de 1 maleta por persona, maletas adicionales seran cobradas <br>
-            * Asistencia en la cita con la vacuna (en caso de requerir este servicio)</p>
-            
-    </section>
+            • 5 noches de alojamiento en New York con impuestos hoteleros & facility fee <br>
+            • Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior <br>
+            • Traslados de llegada y salida en servicio regular en New York <br>
+            • Excursión Alto y Bajo Manhattan <br>
+            • Crucero Maid of The Mist - Opera de Mayo a Octubre <br>
+            • Manejo de 1 maleta por persona, maletas adicionales seran cobradas <br>
+            • Asistencia en la cita con la vacuna (en caso de requerir este servicio)</p>
+        </div>
+        <div class="foto1">
+            <img src="IMAGENES/paquetesNY.jpg" alt="New York" height="400px" width="300px">
+
+        </div>
+        
+        <div class="p2">
+            <h2><link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">El Cairo - 4 dias/ 3noches</h2>
+        <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 1.094 + 60 impuestos <br>
+            Para pagos en pesos argentinos se deberá sumar por persona :U$D 247 impuesto PAIS sobre servicios terrestres y U$D 298 impuesto RG4815 sobre servicios terrestres</p>
+        <p>El programa incluye: <br>
+           • Traslados indicados en programa. <br>
+           • Visita de Medio Día a las Pirámides con guía local de habla hispana. <br>
+           • 3 noches en alojamiento y desayuno Buffet en El Cairo. <br>
+           • Cena con espectáculo de danza del vientre en un barco por el Nilo.
+            Seguro de viaje
+        </p>
+        </div>
+       <div class="foto2">
+           <img src="IMAGENES/paquetesEC.jpg" alt="El Cairo" height="400px" width="300px">
+
+       </div>
+
+        <div class="p3">
+            <h2><link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">Atenas - 4 dias/ 3noches</h2>
+           <p> PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 980 + 41 impuestos <br>
+            Para pagos en pesos argentinos se deberá sumar por persona :U$D 230 impuesto PAIS sobre servicios terrestres y U$D 245 impuesto RG4815 sobre servicios terrestres</p>
+           <p>El programa incluye: <br>
+            • Traslados de llegada y salida. <br>
+            • Visita ciudad medio día. <br>
+            • 3 noches en alojamiento y desayuno en el hotel elegido.
+            Seguro de viaje</p>
+        </div>
+        <div class="foto 3">
+            <img src="IMAGENES/paquetessA.jpg" alt="Atenas" height="400px" width="300px">
+
+        </div>
+  </div>  
 </main>
 <footer>
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300&display=swap" rel="stylesheet">
