--- a/paquetes.html
+++ b/paquetes.html
@@ -31,9 +31,9 @@
     <main>
         <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
         <h1><link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">PAQUETES</h1>
-    <div class="paquetes"> 
+    <div class="grid"> 
 
-        <div class="p1">   
+        <div>   
         <h2><link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">Nueva York - 11 dias/ 10 noches</h2>
         <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos <br>
             Para pagos en pesos argentinos se deberá sumar por persona :U$D 511 impuesto PAIS sobre servicios terrestres y U$D 597 impuesto RG4815 sobre servicios terrestres</p>
@@ -46,10 +46,11 @@
             • Manejo de 1 maleta por persona, maletas adicionales seran cobradas <br>
             • Asistencia en la cita con la vacuna (en caso de requerir este servicio)</p>
         </div>
-        <div class="foto1">
+        <div>
             <img src="IMAGENES/paquetesNY.jpg" alt="New York" height="400px" width="300px">
 
         </div>
+    
         
         <div class="p2">
             <h2><link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">El Cairo - 4 dias/ 3noches</h2>
@@ -80,9 +81,8 @@
         </div>
         <div class="foto 3">
             <img src="IMAGENES/paquetessA.jpg" alt="Atenas" height="400px" width="300px">
-
-        </div>
-  </div>  
+        </div>  
+    </div>    
 </main>
 <footer>
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300&display=swap" rel="stylesheet">
