--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -42,8 +42,32 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <label for="provincia">Provincia:</label><br>
-                        <select name="provincia" id="provincia">
+                        <label>Provincia:</label><br>
+                        <select name="provincia" id="provincias">
+                            <option value="BuenosAires">Buenos Aires</option>
+                            <option value="CABA">CABA</option>
+                            <option value="Catamarca">Catamarca</option>
+                            <option value="Chaco">Chaco</option>
+                            <option value="Chubut">Chubut</option>
+                            <option value="Córdoba">Córdoba</option>
+                            <option value="Corrientes">Corrientes</option>
+                            <option value="EntreRíos"> Entre Ríos</option>
+                            <option value="Formosa">Formosa</option>
+                            <option value="Jujuy">Jujuy</option>
+                            <option value="LaPampa">La Pampa</option>
+                            <option value="LaRioja">La Rioja</option>
+                            <option value="Mendoza">Mendoza</option>
+                            <option value="Misiones">Misiones</option>
+                            <option value="Neuquén">Neuquén</option>
+                            <option value="RioNegro">Río Negro</option>
+                            <option value="Salta">Salta</option>
+                            <option value="SanJuan">San Juan</option>
+                            <option value="SanLuis">San Luis</option>
+                            <option value="SantaCruz">Santa Cruz</option>
+                            <option value="SantaFe">Santa Fe</option>
+                            <option value="SantiagoDelEstero">Santiago del Estero</option>
+                            <option value="TierraDelFuego">Tierra del Fuego</option>
+                            <option value="Tucumán">Tucumán</option>                       
                 </select><br>
                     </div>
                     <div class="col">
@@ -68,6 +92,8 @@
             </form>
         </div>
     </section>
+
 </body>
+
 
 </html>
