--- a/paquetes.html
+++ b/paquetes.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="IMAGENES/favicon.ico" sizes="64x64">
+    <link rel="stylesheet" href="estilosPaquetes.css">
     <title>Document</title>
 </head>
 
@@ -12,7 +14,7 @@
 <body>
     <header>
         <nav>
-            <img src="IMAGENES/Logo1.png" alt="logo" width="120" height="120"> 
+            <img src="IMAGENES/Logo1.png" alt="logo" width="120" height="120">
             <a href="index.html">HOME</a>
             <a href="paquetes.html">PAQUETES</a>
             <a href="previaje.html">PRE VIAJE</a>
@@ -20,23 +22,17 @@
         </nav>
     </header>
     <main>
-    <h1>PAQUETES</h1>
-    <section>
-        <h1>Nueva York - 11 dias/ 10 noches</h1>
-        <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos
-            Para pagos en pesos argentinos se deberá sumar por persona :U$D 511 impuesto PAIS sobre servicios terrestres y U$D 597 impuesto RG4815 sobre servicios terrestres</p>
-        <p>El programa incluye:
-            * 5 noches de alojamiento en New York con impuestos hoteleros & facility fee
-            * Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior
-            * Traslados de llegada y salida en servicio regular en New York
-            * Excursión Alto y Bajo Manhattan
-            * Crucero Maid of The Mist - Opera de Mayo a Octubre
-            * Manejo de 1 maleta por persona, maletas adicionales seran cobradas
-            * Asistencia en la cita con la vacuna (en caso de requerir este servicio)</p>
+        <h1>PAQUETES</h1>
+        <section>
+            <h1>Nueva York - 11 dias/ 10 noches</h1>
+            <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos Para pagos en pesos argentinos se deberá sumar por persona :U$D 511 impuesto PAIS sobre servicios terrestres y U$D 597 impuesto RG4815 sobre servicios terrestres</p>
+            <p>El programa incluye: * 5 noches de alojamiento en New York con impuestos hoteleros & facility fee * Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior * Traslados de llegada y salida en servicio regular en New
+                York * Excursión Alto y Bajo Manhattan * Crucero Maid of The Mist - Opera de Mayo a Octubre * Manejo de 1 maleta por persona, maletas adicionales seran cobradas * Asistencia en la cita con la vacuna (en caso de requerir este servicio)</p>
             <p></p>
-    </section>
-</main>
+        </section>
+    </main>
 
-    
+
 </body>
+
 </html>
