--- a/paquetes.html
+++ b/paquetes.html
@@ -37,26 +37,35 @@
             <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">PAQUETES</h1>
         <div class="grid">
 
-            <div>
+            <div id="nuevaYork">
                 <h2>
-                    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">Nueva York - 11 dias/ 10 noches</h2>
-                <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos <br> Para pagos en pesos argentinos se deberá sumar por persona :U$D 511 impuesto PAIS sobre servicios terrestres y U$D 597 impuesto RG4815 sobre servicios
-                    terrestres</p>
-                <p>El programa incluye: <br> • 5 noches de alojamiento en New York con impuestos hoteleros & facility fee <br> • Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior <br> • Traslados de llegada y salida en servicio
-                    regular en New York <br> • Excursión Alto y Bajo Manhattan <br> • Crucero Maid of The Mist - Opera de Mayo a Octubre <br> • Manejo de 1 maleta por persona, maletas adicionales seran cobradas <br> • Asistencia en la cita con la vacuna
-                    (en caso de requerir este servicio)</p>
-            </div>
-            <div>
-                <img src="IMAGENES/paquetesNY.jpg" alt="New York" height="400px" width="300px">
+                    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">Nueva York - 11 dias/ 10 noches
+                </h2><br>
 
+                <div>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 2188 + 141,00 impuestos <br> Para pagos en pesos argentinos se deberá sumar por persona :U$D 511 impuesto PAIS sobre servicios terrestres y U$D 597 impuesto RG4815 sobre servicios
+                    terrestres
+                    <br> El programa incluye: <br>
+                    <ul>
+                        <li> 5 noches de alojamiento en New York con impuestos hoteleros & facility fee</li>
+                        <li> Circuito 6 días / 5 noches CON DESAYUNO en hoteles Turistas y/o Turista Superior </li>
+                        <li>Traslados de llegada y salida en servicio regular en New York</li>
+                        <li> Excursión Alto y Bajo Manhattan</li>
+                        <li> Crucero Maid of The Mist - Opera de Mayo a Octubre </li>
+                        <li> Manejo de 1 maleta por persona, maletas adicionales seran cobradas </li>
+                        <li> Asistencia en la cita con la vacuna (en caso de requerir este servicio)</li>
+                    </ul>
+                </div>
             </div>
-
+            <div id="nuevaYork">
+                <img src="IMAGENES/paquetesNY.jpg" alt="New York" width="100%">
+            </div>
 
             <div class="p2">
                 <h2>
                     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">El Cairo - 4 dias/ 3noches</h2>
                 <p>PRECIO POR PERSONA EN BASE DOBLE PARA PAGO EN DÓLARES U$D 1.094 + 60 impuestos <br> Para pagos en pesos argentinos se deberá sumar por persona :U$D 247 impuesto PAIS sobre servicios terrestres y U$D 298 impuesto RG4815 sobre servicios
-                    terrestres</p>
+                    terrestres
+                </p>
                 <p>El programa incluye: <br> • Traslados indicados en programa. <br> • Visita de Medio Día a las Pirámides con guía local de habla hispana. <br> • 3 noches en alojamiento y desayuno Buffet en El Cairo. <br> • Cena con espectáculo de danza
                     del vientre en un barco por el Nilo. Seguro de viaje
                 </p>
@@ -92,6 +101,7 @@
                 <a href="https://www.instagram.com/?hl=es"><i class="fab fa-instagram"></i></a>
                 <a href="https://twitter.com/?lang=es"><i class="fab fa-twitter-square"></i></a>
             </nav>
+            <address style="text-align:center;">Derechos reservados @2021</address>
         </section>
 
     </footer>
