--- a/previaje.html
+++ b/previaje.html
@@ -61,14 +61,16 @@
                 Ej. Si gastaste en la agencia $80.000, se te reintegraran $40.000, que podes utilizar durante tu viaje. Sino, al regresar, podes comprar en la agencia un servicio por $40.000.</p>  
         </div>  
         <div class="box7">
+            <section>
             <h2><link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">¿Cómo recibo el crédito?</h2>
             <p>Deberás ingresar los datos de la factura en la web previaje.gob y, una vez cargada, se te otorgara el beneficio. <br>
                 El crédito se podrá recibir a través de dos medios: <br>
                 • Billetera electrónica > Aplicación para descargar en el celular. Nombre: BNA+ (similar a Mercadopago). La misma permite realizar pagos y cobros también. Disponible para Android e IOS. <br>
                 • Tarjeta de Crédito Mastercard Precargada > No establece vínculo entre el beneficiario y el banco, no debe firmar ningún papel de alta. Es descartable una vez que se utilice el total del crédito.</p>
-        </div>  
+            </section>
+            </div>  
         <div class="box 8">
-            <iframe style="align-self: center;" width="560" height="315" src="https://www.youtube.com/embed/h90FhJCym50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe style="align-self: center;" width="500rem" height="300rem" src="https://www.youtube.com/embed/h90FhJCym50" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div> 
                   
     </div>
