--- a/previaje.html
+++ b/previaje.html
@@ -13,8 +13,10 @@
 
 <body>
     <header>
+        <div class="header-logo">
+            <a href="index.html"><img src="IMAGENES/Logo1.png" alt="logo" width="200" height="200"></a>
+        </div>
 
-        <a href="index.html" id="header-logo"><img src="IMAGENES/Logo1.png" alt="logo" width="200" height="200"></a>
         <nav class="header-menubar">
             <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
@@ -22,7 +24,7 @@
                 <div class="c1"><a href="index.html">HOME</a></div>
                 <div class="c2"><a href="paquetes.html">PAQUETES</a></div>
                 <div class="c3"><a href="previaje.html">PRE VIAJE</a></div>
-                <div class="c4"><a href="formularioContacto.html">CONTACTO</a></div>
+                <div class="c4"> <a href="formularioContacto.html">CONTACTO</a></div>
             </div>
         </nav>
 
