--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>TURISTECA</title>
     <link rel="stylesheet" href="estilosindex.css">
     <script src="https://kit.fontawesome.com/71ba4d0035.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="carrouselIndex.js"></script>
 </head>
 
 <body>
@@ -31,14 +34,32 @@
     </header>
 
     <main>
-        <section class="imagenes">
-            <img src="IMAGENES/index1.jpg" height="300px" width="300px">
-            <img src="IMAGENES/index2.jpg" height="300px" width="300px">
-            <img src="IMAGENES/index3pg.jpg" height="300px" width="300px">
-            <img src="IMAGENES/index4.jpg" height="300px" width="300px">
-           
-
-        </section>
+        <div class="container">
+            <div class="row">
+                <div class="col s12">
+                    <div class="carousel center-align">
+                        <div class="carousel-item">
+                            <img src="IMAGENES/index1.jpg" height="300px" width="500px">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="IMAGENES/index2.jpg" height="300px" width="500px">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="IMAGENES/index3pg.jpg" height="300px" width="500px">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="IMAGENES/index4.jpg" height="300px" width="500px">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--<section class="imagenes">
+                <img src="IMAGENES/index1.jpg" height="300px" width="300px">
+                <img src="IMAGENES/index2.jpg" height="300px" width="300px">
+                <img src="IMAGENES/index3pg.jpg" height="300px" width="300px">
+                <img src="IMAGENES/index4.jpg" height="300px" width="300px">
+            </section>-->
+        </div>
         <div class="contenido-principal">
 
             <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
