reordeno carpetas y agrego animaciones

--- a/formularioContacto.html
+++ b/formularioContacto.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="IMAGENES/favicon.ico" sizes="64x64">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="js/bootstrap.min.js">
-    <link rel="stylesheet" href="estilosFormularios.css">
+    <link rel="stylesheet" href="css/estilosFormularios.css">
     <title>Formulario de Contacto</title>
     <script src="https://kit.fontawesome.com/71ba4d0035.js" crossorigin="anonymous"></script>
     <script src="scriptFormulario.js"></script>
