--- a/paquetes.html
+++ b/paquetes.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="IMAGENES/favicon.ico" sizes="64x64">
     <title>PAQUETES</title>
-    <link rel="stylesheet" href="estilosPaquetes.css">
+    <link rel="stylesheet" href="css/estilosPaquetes.css">
     <script src="https://kit.fontawesome.com/71ba4d0035.js" crossorigin="anonymous"></script>
 </head>
 
